crates/ir/tests/ir/snapshots/main__ir__lower__if_let__if_let_chain.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module if_let__if_let_chain

type Option[x10] = Some#0(x10) | None#1
type Result[y10, z10] = Ok#0(z10) | Err#1(y10)
type Input = OptVal#0(Option[Int]) | ResVal#1(Result[String, Int])
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn classify(v0: Input) -> String =
  switch v0 {
    0 (v1: Option[Int]) ->
      switch v1 {
        0 (v2: x10) ->
          "first"
        _ ->
          switch v0 {
            1 (v3: Result[String, Int]) ->
              switch v3 {
                0 (v4: z10) ->
                  "second"
                _ ->
                  "neither"
              }
            _ ->
              "neither"
          }
      }
    _ ->
      switch v0 {
        1 (v5: Result[String, Int]) ->
          switch v5 {
            0 (v6: z10) ->
              "second"
            _ ->
              "neither"
          }
        _ ->
          "neither"
      }
  }

fn main() -> Unit =
  let v7: Option[Int] = construct Option::Some#0(1)
  let v8: Input = construct Input::OptVal#0(v7)
  let v9: String = call classify(v8)
  let v10: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v11: Unit = call println(v10, v9)
  let v12: Result[String, Int] = construct Result::Ok#0(2)
  let v13: Input = construct Input::ResVal#1(v12)
  let v14: String = call classify(v13)
  let v15: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v16: Unit = call println(v15, v14)
  let v18: Option[Int] = construct Option::None#1()
  let v19: Input = construct Input::OptVal#0(v18)
  let v20: String = call classify(v19)
  let v17: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v21: Unit = call println(v17, v20)
  v21
