crates/ir/tests/ir/snapshots/main__ir__lower__if_let__if_let_guard.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module if_let__if_let_guard

type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn describe(v0: Option[Int]) -> String =
  switch v0 {
    0 (v1: Int) ->
      let_join v10(v5: Bool) =
        if v5 {
          let v6: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
          let v7: String = trait_call core/show.Show.show(v6, v1)
          let v8: String = concat_string("big: ", v7)
          v8
        } else {
          switch v0 {
            0 (v9: x10) ->
              "small"
            _ ->
              "none"
          }
        }
      in
      let v2: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
      let v3: Bool = trait_call core/ord.Ord.lt(v2, v1, 50)
      let v4: Bool = not(v3)
      jump v10(v4)
    _ ->
      switch v0 {
        0 (v11: x10) ->
          "small"
        _ ->
          "none"
      }
  }

fn main() -> Unit =
  let v12: Option[Int] = construct Option::Some#0(100)
  let v13: String = call describe(v12)
  let v14: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v15: Unit = call println(v14, v13)
  let v16: Option[Int] = construct Option::Some#0(3)
  let v17: String = call describe(v16)
  let v18: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v19: Unit = call println(v18, v17)
  let v21: Option[Int] = construct Option::None#1()
  let v22: String = call describe(v21)
  let v20: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v23: Unit = call println(v20, v22)
  v23
