crates/ir/tests/ir/snapshots/main__ir__lower__if_let__if_let_option.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module if_let__if_let_option

type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn show_opt(v0: Option[Int]) -> String =
  switch v0 {
    0 (v1: Int) ->
      let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v3: String = trait_call core/show.Show.show(v2, v1)
      let v4: String = concat_string("got ", v3)
      v4
    _ ->
      "none"
  }

fn main() -> Unit =
  let v5: Option[Int] = construct Option::Some#0(42)
  let v6: String = call show_opt(v5)
  let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v8: Unit = call println(v7, v6)
  let v10: Option[Int] = construct Option::None#1()
  let v11: String = call show_opt(v10)
  let v9: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v12: Unit = call println(v9, v11)
  v12
