crates/ir/tests/ir/snapshots/main__ir__lower__if_let__if_let_result.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module if_let__if_let_result

type Result[x10, y10] = Ok#0(y10) | Err#1(x10)
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn describe(v0: Result[String, Int]) -> String =
  switch v0 {
    0 (v1: Int) ->
      let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v3: String = trait_call core/show.Show.show(v2, v1)
      let v4: String = concat_string("ok: ", v3)
      v4
    _ ->
      switch v0 {
        1 (v5: String) ->
          let v6: String = concat_string("err: ", v5)
          v6
        _ ->
          "unknown"
      }
  }

fn main() -> Unit =
  let v7: Result[String, Int] = construct Result::Ok#0(1)
  let v8: String = call describe(v7)
  let v9: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v10: Unit = call println(v9, v8)
  let v12: Result[String, Int] = construct Result::Err#1("bad")
  let v13: String = call describe(v12)
  let v11: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v14: Unit = call println(v11, v13)
  v14
